# financial-agent

./: pyproject.toml
app/: agent.py
